<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_color" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="15dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/etRestName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/back"
            android:text="@string/signup_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" >
        </TextView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <com.etisbew.eatz.facebook.LoginButton
                android:id="@+id/tvFBLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#3c5a9a"
                android:padding="12dp"
                android:text="@string/login_facebook"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/facebook_icon_small" />
            

            <!-- <TextView
                android:id="@+id/tvFBLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#3c5a9a"
                android:drawableRight="@drawable/facebook_icon_small"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/login_facebook"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" /> -->

            <TextView
                android:id="@+id/tvGmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#de4b3b"
                android:padding="12dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:text="@string/login_gmail"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/plus" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                    <View
                        android:id="@+id/leftLine"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_weight="1"
                        android:background="#c6c6c6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/deviderTEXT"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/View01"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:background="#c6c6c6" />

                </LinearLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/textfield_blackborders"
                android:hint="@string/nameInRester"
                android:padding="10dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfield_blackborders"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="10"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfield_blackborders"
                android:hint="@string/emailHINT"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfield_blackborders"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/terms"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/signup_background"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signUp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/member"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>