<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_color" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="15dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/etRestName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/back"
            android:text="@string/login_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="18dp" >
        </TextView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.etisbew.eatz.facebook.LoginButton
                    android:id="@+id/tvFBLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#3c5a9a"
                    android:drawableRight="@drawable/facebook_icon_small"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/login_facebook"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#de4b3b"
                    android:drawableRight="@drawable/plus"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/login_gmail"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <View
                            android:id="@+id/leftLine"
                            android:layout_width="wrap_content"
                            android:layout_height="1dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:layout_weight="1"
                            android:background="#c6c6c6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginRight="3dp"
                            android:text="@string/deviderTEXT"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000000"
                            android:textSize="13sp" />

                        <View
                            android:id="@+id/View01"
                            android:layout_width="wrap_content"
                            android:layout_height="1dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_weight="1"
                            android:background="#c6c6c6" />
                    </LinearLayout>
                </RelativeLayout>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/textfield_blackborders"
                    android:hint="@string/emailHINT"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="14sp" >
                </EditText>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textfield_blackborders"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/forgotPSWD"
                    android:textColor="@color/red_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/signup_background"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/signupNow"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/guest_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <View
                        android:id="@+id/leftLine1"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_weight="1"
                        android:background="#c6c6c6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/deviderTEXT"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000"
                        android:textSize="13sp" />

                    <View
                        android:id="@+id/View012"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:background="#c6c6c6" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvContinue_lable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/signup_background"
                android:gravity="center"
                android:padding="10dp"
                android:text="Continue Without Login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/guest_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/et_guest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/textfield_blackborders"
                    android:hint="Name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" >
                </EditText>

                <EditText
                    android:id="@+id/et_guest_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textfield_blackborders"
                    android:hint="@string/emailHINT"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" >
                </EditText>

                <EditText
                    android:id="@+id/et_guest_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textfield_blackborders"
                    android:hint="Phone Number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" >
                </EditText>

                <CheckBox
                    android:id="@+id/register_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:text="Register me with eatz"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_guest_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textfield_blackborders"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_guest_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/red_color"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Continue as a Guest"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>